--- a/aplicacion/app/src/main/res/layout/activity_entradas_letra.xml
+++ b/aplicacion/app/src/main/res/layout/activity_entradas_letra.xml
@@ -3,9 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:layout_margin="10dp"
-    android:gravity="center">
+    android:orientation="vertical">
 
     <TextView
         style="@style/MyTitleTextStyle"
@@ -13,7 +12,39 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:text="Habitaciones ocupadas" />
+        android:text="Entradas"
+         />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="67dp"
+        android:orientation="horizontal">
+
+
+        <com.google.android.material.textfield.TextInputLayout
+            style="@style/MyTextInputLayoutStyle"
+            android:id="@+id/letraTextInputLayout"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.75"
+            app:startIconDrawable="@drawable/ic_room"
+            android:hint="Habitación/Módulo">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/letraEditText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <Button
+            android:id="@+id/buscarButton"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.30"
+            android:text="Buscar" />
+
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -26,13 +57,15 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Habitación" />
+            android:text="Habitación"
+            />
 
         <TextView
             style="@style/MyNormalTextStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Número de Personas" />
+            android:text="Número de Personas"
+             />
 
     </LinearLayout>
 
@@ -44,9 +77,10 @@
             android:id="@+id/emptyTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="No existe ningun registro de entrada aún."
+            android:text="No existen registros para ninguna habitación del módulo."
             android:gravity="center"
-            android:visibility="gone" />
+            android:visibility="gone"
+            android:layout_centerInParent="true"/>
 
         <ProgressBar
             android:id="@+id/progressBar"
@@ -54,16 +88,15 @@
             android:layout_height="wrap_content"
             android:visibility="gone"
             android:indeterminate="true"
-            android:layout_gravity="center"
             android:layout_centerInParent="true"/>
 
         <ListView
             android:id="@+id/listView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="10dp" />
+            android:layout_marginTop="10dp"
+            />
 
     </RelativeLayout>
-
 
 </LinearLayout>
