--- a/aplicacion/app/src/main/res/values/theme.xml
+++ b/aplicacion/app/src/main/res/values/theme.xml
@@ -1,6 +1,6 @@
 <resources>
     <!-- Base application theme. -->
-    <style name="Theme.MyAppTheme" parent="Theme.Material3.DayNight">
+    <style name="Theme.MyAppTheme" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/md_theme_primary</item>
         <item name="colorOnPrimary">@color/md_theme_onPrimary</item>
