--- a/aplicacion/app/src/main/res/layout/activity_entradas_letra_fecha.xml
+++ b/aplicacion/app/src/main/res/layout/activity_entradas_letra_fecha.xml
@@ -1,127 +1,164 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/linearLayout3"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_margin="10dp"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
+
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/toolbar_layout"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@+id/titleTextView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        style="@style/MyTitleTextStyle"
         android:id="@+id/titleTextView"
+        style="@style/MyTitleTextStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="20dp"
         android:text="Entradas"
-         />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
     <com.google.android.material.textfield.TextInputLayout
-        style="@style/MyTextInputLayoutStyle"
         android:id="@+id/letraTextInputLayout"
-        android:layout_width="match_parent"
+        style="@style/MyTextInputLayoutStyle"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:startIconDrawable="@drawable/ic_room"
-        android:hint="Habitación/Módulo">
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="5dp"
+        android:hint="Habitación/Módulo"
+        app:layout_constraintBottom_toTopOf="@+id/fechaInicioTextView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/titleTextView"
+        app:startIconDrawable="@drawable/ic_room">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/letraEditText"
             android:layout_width="match_parent"
-            android:inputType="textPersonName"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:inputType="textPersonName" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
+
+    <TextView
+        android:id="@+id/fechaInicioTextView"
+        style="@style/MyNormalTextStyle"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginBottom="5dp"
-        android:orientation="horizontal">
+        android:background="@drawable/text_view_border"
+        android:clickable="true"
+        android:drawableStart="@drawable/ic_datetime"
+        android:focusable="true"
+        android:hint="  Fecha y hora inicial"
+        android:padding="10dp"
+        app:layout_constraintBottom_toTopOf="@+id/buscarButton"
+        app:layout_constraintEnd_toStartOf="@+id/fechaFinTextView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/letraTextInputLayout" />
 
-        <TextView
-            style="@style/MyNormalTextStyle"
-            android:background="@drawable/text_view_border"
-            android:id="@+id/fechaInicioTextView"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:padding="10dp"
-            android:hint="  Fecha y hora inicial"
-            android:drawableStart="@drawable/ic_datetime"
-            android:clickable="true"
-            android:focusable="true" />
+    <TextView
+        android:id="@+id/fechaFinTextView"
+        style="@style/MyNormalTextStyle"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:background="@drawable/text_view_border"
+        android:clickable="true"
+        android:drawableStart="@drawable/ic_datetime"
+        android:focusable="true"
+        android:hint="  Fecha y hora final"
+        android:padding="10dp"
+        app:layout_constraintBaseline_toBaselineOf="@+id/fechaInicioTextView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/fechaInicioTextView" />
 
-        <TextView
-            style="@style/MyNormalTextStyle"
-            android:background="@drawable/text_view_border"
-            android:id="@+id/fechaFinTextView"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:padding="10dp"
-            android:hint="  Fecha y hora final"
-            android:drawableStart="@drawable/ic_datetime"
-            android:clickable="true"
-            android:focusable="true" />
-
-    </LinearLayout>
 
     <Button
         android:id="@+id/buscarButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="Buscar" />
+        android:layout_marginBottom="16dp"
+        android:text="Buscar"
+        app:layout_constraintBottom_toTopOf="@+id/textView5"
+        app:layout_constraintEnd_toEndOf="@+id/fechaInicioTextView"
+        app:layout_constraintHorizontal_bias="0.427"
+        app:layout_constraintStart_toEndOf="@+id/fechaInicioTextView"
+        app:layout_constraintTop_toBottomOf="@+id/fechaInicioTextView" />
 
-
-    <LinearLayout
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/textView5"
+        style="@style/MyNormalTextStyle"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:padding="16dp">
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginBottom="25dp"
+        android:text="Habitación"
+        app:layout_constraintBottom_toTopOf="@+id/listView"
+        app:layout_constraintEnd_toStartOf="@+id/textView6"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/buscarButton" />
 
-        <TextView
-            style="@style/MyNormalTextStyle"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Habitación" />
+    <TextView
+        android:id="@+id/textView6"
+        style="@style/MyNormalTextStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="15dp"
+        android:layout_marginRight="15dp"
+        android:text="Número de Personas"
+        app:layout_constraintBaseline_toBaselineOf="@+id/textView5"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/textView5" />
 
-        <TextView
-            style="@style/MyNormalTextStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Número de Personas" />
 
-    </LinearLayout>
+    <TextView
+        android:id="@+id/emptyTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="No existen registros para ninguna habitación del módulo."
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="@+id/listView"
+        app:layout_constraintStart_toStartOf="@+id/listView"
+        app:layout_constraintTop_toTopOf="@+id/listView" />
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:indeterminate="true"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/emptyTextView"
+        app:layout_constraintTop_toTopOf="@+id/listView" />
 
-        <TextView
-            android:id="@+id/emptyTextView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="No existen registros para ninguna habitación del módulo."
-            android:gravity="center"
-            android:visibility="gone"
-            android:layout_centerInParent="true"/>
+    <ListView
+        android:id="@+id/listView"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
-        <ProgressBar
-            android:id="@+id/progressBar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:visibility="gone"
-            android:indeterminate="true"
-            android:layout_centerInParent="true" />
 
-        <ListView
-            android:id="@+id/listView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="10dp"/>
-
-    </RelativeLayout>
-
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
