--- a/aplicacion/app/src/main/res/layout/activity_edit_user.xml
+++ b/aplicacion/app/src/main/res/layout/activity_edit_user.xml
@@ -26,18 +26,19 @@
 
 
     <com.google.android.material.textfield.TextInputLayout
-        style="@style/MyTextInputLayoutStyle"
         android:id="@+id/usernameTextInputLayout"
+        style="@style/MyTextInputLayoutStyle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="128dp"
         android:layout_marginEnd="8dp"
         android:hint="Username"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/titleTextView"
+        app:startIconDrawable="@drawable/ic_username"
         tools:layout_conversion_absoluteHeight="61dp"
         tools:layout_conversion_absoluteWidth="379dp">
 
@@ -45,9 +46,9 @@
             android:id="@+id/usernameEditText"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:visibility="visible"
             android:imeOptions="actionNext"
             android:inputType="textPersonName"
+            android:visibility="visible"
             tools:layout_conversion_absoluteHeight="56dp"
             tools:layout_conversion_absoluteWidth="379dp"
             tools:layout_editor_absoluteX="16dp"
@@ -68,7 +69,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/usernameTextInputLayout"
         tools:layout_conversion_absoluteHeight="61dp"
-        tools:layout_conversion_absoluteWidth="379dp">
+        tools:layout_conversion_absoluteWidth="379dp"
+        app:startIconDrawable="@drawable/ic_email">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/emailEditText"
@@ -87,8 +89,13 @@
         android:id="@+id/adminSwitch"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
         android:text="Admin"
+        android:scaleX="1.07"
+        android:scaleY="1.07"
+        android:textColor="@color/md_theme_primary"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.236"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/emailTextInputLayout" />
 
@@ -97,22 +104,27 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Profesor"
+        android:textColor="@color/md_theme_primary"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.851"
+        android:scaleX="1.07"
+        android:scaleY="1.07"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/adminSwitch" />
+        app:layout_constraintTop_toTopOf="@+id/adminSwitch" />
 
     <com.google.android.material.textfield.TextInputLayout
-        style="@style/MyTextInputLayoutStyle"
         android:id="@+id/despachoTextInputLayout"
+        style="@style/MyTextInputLayoutStyle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="24dp"
         android:layout_marginEnd="8dp"
         android:hint="Despacho"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/profesorSwitch"
+        app:startIconDrawable="@drawable/ic_desk"
         tools:layout_conversion_absoluteHeight="61dp"
         tools:layout_conversion_absoluteWidth="379dp">
 
@@ -121,11 +133,11 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:imeOptions="actionDone"
+            android:inputType="textPersonName"
             tools:layout_conversion_absoluteHeight="56dp"
             tools:layout_conversion_absoluteWidth="379dp"
             tools:layout_editor_absoluteX="16dp"
-            tools:layout_editor_absoluteY="267dp"
-            android:inputType="textPersonName"/>
+            tools:layout_editor_absoluteY="267dp" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -135,7 +147,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="Update"
+        android:text="Actualizar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/despachoTextInputLayout"
