--- a/aplicacion/app/src/main/res/layout/activity_mandar_aviso.xml
+++ b/aplicacion/app/src/main/res/layout/activity_mandar_aviso.xml
@@ -20,7 +20,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:text="Enviar Aviso"
+        android:text="Enviar aviso"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar" />
@@ -42,7 +42,9 @@
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/subjectEditText"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:imeOptions="actionNext"
+            android:inputType="textPersonName"/>
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -63,6 +65,7 @@
             android:id="@+id/bodyEditText"
             android:layout_width="match_parent"
             android:layout_height="99dp"
+            android:imeOptions="actionDone"
             android:inputType="textMultiLine" />
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -73,7 +76,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="48dp"
-        android:text="Enviar correo"
+        android:text="Enviar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/bodyTextInputLayout" />
