--- a/aplicacion/app/src/main/res/drawable/ic_alert.xml
+++ b/aplicacion/app/src/main/res/drawable/ic_alert.xml
@@ -1,5 +1,11 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android" android:height="24dp" android:viewportHeight="24" android:viewportWidth="24" android:width="24dp">
-      
-    <path android:fillColor="#ff0000" android:pathData="M13,14h-2V9h2m0,9h-2v-2h2M1,21h22L12,2z"/>
-    
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="24"
+    android:viewportHeight="24">
+
+    <path
+        android:fillColor="#ff0000"
+        android:pathData="M13,14h-2V9h2m0,9h-2v-2h2M1,21h22L12,2z" />
+
 </vector>
