--- a/aplicacion/app/src/main/res/drawable/ic_body.xml
+++ b/aplicacion/app/src/main/res/drawable/ic_body.xml
@@ -1,5 +1,11 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android" android:height="24dp" android:viewportHeight="24" android:viewportWidth="24" android:width="24dp">
-      
-    <path android:fillColor="#ffffff" android:pathData="M4,19v-2h10v2zM4,15v-2h16v2zM4,11L4,9h16v2zM4,7L4,5h16v2z"/>
-    
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="24"
+    android:viewportHeight="24">
+
+    <path
+        android:fillColor="#ffffff"
+        android:pathData="M4,19v-2h10v2zM4,15v-2h16v2zM4,11L4,9h16v2zM4,7L4,5h16v2z" />
+
 </vector>
