--- a/aplicacion/app/src/main/res/drawable/ic_login.xml
+++ b/aplicacion/app/src/main/res/drawable/ic_login.xml
@@ -3,7 +3,7 @@
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24">
-  <path
-      android:pathData="M10.3,7.7a0.984,0.984 0,0 0,0 1.4l1.9,1.9H3c-0.55,0 -1,0.45 -1,1s0.45,1 1,1h9.2l-1.9,1.9a0.984,0.984 0,0 0,0 1.4c0.39,0.39 1.01,0.39 1.4,0l3.59,-3.59a0.996,0.996 0,0 0,0 -1.41L11.7,7.7a0.984,0.984 0,0 0,-1.4 0M20,19h-7c-0.55,0 -1,0.45 -1,1s0.45,1 1,1h7c1.1,0 2,-0.9 2,-2V5c0,-1.1 -0.9,-2 -2,-2h-7c-0.55,0 -1,0.45 -1,1s0.45,1 1,1h7z"
-      android:fillColor="#ffffff"/>
+    <path
+        android:fillColor="#ffffff"
+        android:pathData="M10.3,7.7a0.984,0.984 0,0 0,0 1.4l1.9,1.9H3c-0.55,0 -1,0.45 -1,1s0.45,1 1,1h9.2l-1.9,1.9a0.984,0.984 0,0 0,0 1.4c0.39,0.39 1.01,0.39 1.4,0l3.59,-3.59a0.996,0.996 0,0 0,0 -1.41L11.7,7.7a0.984,0.984 0,0 0,-1.4 0M20,19h-7c-0.55,0 -1,0.45 -1,1s0.45,1 1,1h7c1.1,0 2,-0.9 2,-2V5c0,-1.1 -0.9,-2 -2,-2h-7c-0.55,0 -1,0.45 -1,1s0.45,1 1,1h7z" />
 </vector>
