--- a/aplicacion/app/src/main/res/drawable/ic_password.xml
+++ b/aplicacion/app/src/main/res/drawable/ic_password.xml
@@ -1,4 +1,9 @@
-<vector android:height="24dp" android:viewportHeight="24"
-    android:viewportWidth="24" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="@color/md_theme_onSurfaceVariant" android:pathData="M2,19v-2h20v2zM3.15,12.95l-1.3,-0.75l0.85,-1.5L1,10.7L1,9.2h1.7l-0.85,-1.45L3.15,7L4,8.45L4.85,7l1.3,0.75L5.3,9.2L7,9.2v1.5L5.3,10.7l0.85,1.5l-1.3,0.75l-0.85,-1.5zM11.15,12.95l-1.3,-0.75l0.85,-1.5L9,10.7L9,9.2h1.7l-0.85,-1.45l1.3,-0.75l0.85,1.45l0.85,-1.45l1.3,0.75l-0.85,1.45L15,9.2v1.5h-1.7l0.85,1.5l-1.3,0.75l-0.85,-1.5zM19.15,12.95l-1.3,-0.75l0.85,-1.5L17,10.7L17,9.2h1.7l-0.85,-1.45l1.3,-0.75l0.85,1.45l0.85,-1.45l1.3,0.75l-0.85,1.45L23,9.2v1.5h-1.7l0.85,1.5l-1.3,0.75l-0.85,-1.5z"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="24"
+    android:viewportHeight="24">
+    <path
+        android:fillColor="@color/md_theme_onSurfaceVariant"
+        android:pathData="M2,19v-2h20v2zM3.15,12.95l-1.3,-0.75l0.85,-1.5L1,10.7L1,9.2h1.7l-0.85,-1.45L3.15,7L4,8.45L4.85,7l1.3,0.75L5.3,9.2L7,9.2v1.5L5.3,10.7l0.85,1.5l-1.3,0.75l-0.85,-1.5zM11.15,12.95l-1.3,-0.75l0.85,-1.5L9,10.7L9,9.2h1.7l-0.85,-1.45l1.3,-0.75l0.85,1.45l0.85,-1.45l1.3,0.75l-0.85,1.45L15,9.2v1.5h-1.7l0.85,1.5l-1.3,0.75l-0.85,-1.5zM19.15,12.95l-1.3,-0.75l0.85,-1.5L17,10.7L17,9.2h1.7l-0.85,-1.45l1.3,-0.75l0.85,1.45l0.85,-1.45l1.3,0.75l-0.85,1.45L23,9.2v1.5h-1.7l0.85,1.5l-1.3,0.75l-0.85,-1.5z" />
 </vector>
