--- a/aplicacion/app/src/main/res/drawable/ic_username.xml
+++ b/aplicacion/app/src/main/res/drawable/ic_username.xml
@@ -1,4 +1,9 @@
-<vector android:height="24dp" android:viewportHeight="24"
-    android:viewportWidth="24" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="@color/md_theme_onSurfaceVariant" android:pathData="M12,4a4,4 0,0 1,4 4a4,4 0,0 1,-4 4a4,4 0,0 1,-4 -4a4,4 0,0 1,4 -4m0,10c4.42,0 8,1.79 8,4v2H4v-2c0,-2.21 3.58,-4 8,-4"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="24"
+    android:viewportHeight="24">
+    <path
+        android:fillColor="@color/md_theme_onSurfaceVariant"
+        android:pathData="M12,4a4,4 0,0 1,4 4a4,4 0,0 1,-4 4a4,4 0,0 1,-4 -4a4,4 0,0 1,4 -4m0,10c4.42,0 8,1.79 8,4v2H4v-2c0,-2.21 3.58,-4 8,-4" />
 </vector>
