--- a/aplicacion/app/src/main/res/drawable/text_view_border.xml
+++ b/aplicacion/app/src/main/res/drawable/text_view_border.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="@android:color/transparent" />
-    <stroke android:color="@color/md_theme_outline" android:width="1dp" />
+    <stroke
+        android:width="1dp"
+        android:color="@color/md_theme_outline" />
     <corners android:radius="4dp" />
 </shape>
