--- a/aplicacion/app/src/main/res/layout/activity_main.xml
+++ b/aplicacion/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,10 +9,10 @@
 
     <TextView
         android:id="@+id/beaconCount"
-        android:text="0 visible beacons:"
-        android:textAlignment="center"
         android:layout_width="match_parent"
-        android:layout_height="20dp"/>
+        android:layout_height="20dp"
+        android:text="0 visible beacons:"
+        android:textAlignment="center" />
 
     <ListView
         android:id="@+id/beaconList"
@@ -24,25 +23,24 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_weight="1">
+        android:layout_weight="1"
+        android:orientation="horizontal">
+
         <Button
             android:id="@+id/rangingButton"
-            android:onClick="rangingButtonTapped"
-            android:text="Disable Ranging"
             android:layout_width="0dp"
             android:layout_height="50dp"
-            android:layout_weight="1">
-        </Button>
+            android:layout_weight="1"
+            android:onClick="rangingButtonTapped"
+            android:text="Disable Ranging"></Button>
 
         <Button
             android:id="@+id/monitoringButton"
-            android:text="Disable Monitoring"
-            android:onClick="monitoringButtonTapped"
             android:layout_width="0dp"
             android:layout_height="50dp"
-            android:layout_weight="1">
-        </Button>
+            android:layout_weight="1"
+            android:onClick="monitoringButtonTapped"
+            android:text="Disable Monitoring"></Button>
 
     </LinearLayout>
 
