--- a/aplicacion/app/src/main/res/layout/habitacion_adapter.xml
+++ b/aplicacion/app/src/main/res/layout/habitacion_adapter.xml
@@ -10,17 +10,17 @@
         android:orientation="horizontal">
 
         <TextView
-            android:textColor="@color/md_theme_secondary"
             android:id="@+id/habitacionTextView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:textColor="@color/md_theme_secondary" />
 
         <TextView
-            android:textColor="@color/md_theme_secondary"
             android:id="@+id/numPersonasTextView"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:textColor="@color/md_theme_secondary" />
 
     </LinearLayout>
 
