--- a/aplicacion/app/src/main/res/layout/mapa_activity.xml
+++ b/aplicacion/app/src/main/res/layout/mapa_activity.xml
@@ -9,13 +9,12 @@
         android:id="@+id/toolbar"
         layout="@layout/toolbar_layout"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-         />
+        android:layout_height="wrap_content" />
 
     <WebView
         android:id="@+id/webView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" >
+        android:layout_height="match_parent">
 
 
     </WebView>
