--- a/aplicacion/app/src/main/res/layout/user_adapter.xml
+++ b/aplicacion/app/src/main/res/layout/user_adapter.xml
@@ -10,12 +10,11 @@
         android:orientation="horizontal">
 
         <TextView
-            android:textColor="@color/md_theme_secondary"
             android:id="@+id/usernameTextView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            />
+            android:textColor="@color/md_theme_secondary" />
 
         <TextView
             android:id="@+id/emailTextView"
